Added config file Made stops mode specific. Made stopping pattern request not require a stop_id Removed TODO note for fixing negative date issue - this is actually an issue with PTV data. Removed incorrect readme.md

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,8 @@
 devid=
 key=
 endpoint="http://timetableapi.ptv.vic.gov.au"
+endpoint=http://timetableapi.ptv.vic.gov.au
 
 [database]
 string='sqlite:///gtfs.db'
+string=sqlite:///gtfs.db
